03-lection1/01-button_Kseniia Malysheva

--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -1,6 +1,6 @@
 button {
     text-align: center;
-    font-family: Roboto;
+    font-family: Roboto, serif;
     font-size: 16px;
     font-weight: 500;
     line-height: normal;
