--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,29 @@
-/* Стилизация аккордеона */
+details {
+    font-family: Inter, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    background-color: white;
+    border: 1px #ACB5BD solid;
+    border-radius: 8px;
+    width: 730px;
+    padding: 24px 32px;
+}
+
+summary {
+    color: #212429;
+    cursor: pointer;
+    list-style: none;
+}
+
+p {
+    color: #495057;
+    cursor: default;
+}
+
+.container {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+}
