--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,28 +1,24 @@
-:root {
-    --color-title: #212429;
-    --color-text: #495057;
-}
-
 .accordion {
     font-family: Inter, serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    background-color: white;
-    border: 1px #ACB5BD solid;
+    background-color: var(--white);
+    border: 1px solid;
+    border-color: var(--grey-3);
     border-radius: 8px;
     width: 730px;
     padding: 24px 32px;
 }
 
 .accordion_title {
-    color:var(--color-title);
+    color:var(--black);
     cursor: pointer;
     list-style: none;
 }
 
 .accordion_text {
-    color: var(--color-text);
+    color: var(--grey-4);
     cursor: default;
 }
