--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,12 @@
     --grey-2: #DDE2E5;
     --grey-3: #ACB5BD;
     --grey-4: #495057;
+    --backgroung-primary: #4263EB;
+    --backgroung-primary-hover: #2342C0;
+    --backgroung-primary-active: #223DAC;
+    --backgroung-secondary-hover: #5028C6;
+    --backgroung-secondary-active: #4921be;
+    --border-alternative-active:#111517;
 
     --error: var(--red);
     --success: var(--blue);
@@ -22,3 +28,4 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
