03-lection1/02-accordion_Kseniia Malysheva

--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -50,7 +50,7 @@
 
 .button_alternate {
     background-color: var(--white);
-    color: var(--dark-4);
+    color: var(--grey-4);
     border-color: var(--grey-3);
     border-width: 1px;
     border-style: solid;
