--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,4 +1,11 @@
 .accordion {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.accordion__section {
     font-family: Roboto, sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -12,13 +19,19 @@
     padding: 24px 32px;
 }
 
-.accordion_title {
+
+.accordion__section[open] {
+    padding-bottom: 32px;
+}
+
+.accordion__title {
     color:var(--black);
     cursor: pointer;
     list-style: none;
 }
 
-.accordion_text {
+.accordion__text {
     color: var(--grey-4);
     cursor: default;
+    margin: 16px 0 0 0;
 }
