--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -1,8 +1,8 @@
 .banner {
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;
     background-color: var(--white);
-    border-color: var(--grey-3);
     border: 1px solid;
+    border-color: var(--grey-3);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
@@ -45,25 +45,26 @@
     gap: 1px;
     margin-top: 39px;
     align-items: flex-end;
+    height: 50px;
 }
 
 .banner__graph_item {
     background-color: var(--backgroung-primary);
-    flex:1 1 calc(33.33% - 30px);
+    width: 100%;
 }
 
 .large {
-    height: 50px;
+    height: 100%;
 }
 
 .medium {
-    height: 35px;
+    height: 50%;
 }
 
 .regular {
-    height: 22px;
+    height: 30%;
 }
 
 .small {
-    height: 11px;
+    height: 12%;
 }
