--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,8 @@
 @import '../fonts/fonts.css';
 
+@import '../../components/card/card.css';
+@import '../../components/page/page.css';
+
 :root {
     --white: #ffffff;
     --black: #212429;
@@ -17,6 +20,7 @@
     --backgroung-secondary-hover: #5028C6;
     --backgroung-secondary-active: #4921be;
     --border-alternative-active:#111517;
+    --backgroung-page: #F9FAFC;
 
     --error: var(--red);
     --success: var(--blue);
@@ -25,7 +29,10 @@
     --secondary: var(--purple);
 }
 
-* {
+body {
     font-family: 'Roboto', sans-serif;
 }
 
+html, body {
+    height: 100%;
+}
