--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,8 @@
 
 @import '../../components/card/card.css';
 @import '../../components/page/page.css';
+@import '../../components/header/header.css';
+@import '../../components/footer/footer.css';
 
 :root {
     --white: #ffffff;
@@ -31,6 +33,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 html, body {
