--- a/components/page/page.css
+++ b/components/page/page.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-}
-
 .page {
     display: flex;
     flex-direction: column;
@@ -17,22 +13,10 @@ body {
     margin: auto;
 }
 
-.header {
-    background-color: var(--white);
-    padding-top: 96px;
-    padding-bottom: 77px;
-}
-
-.header_title {
-    color: var(--black);
-    font-size: 50px;
-    line-height: 64px;
-    margin: 0;
-}
-
 .main {
     border-top: 1px solid;
     border-bottom: 1px solid;
     border-color: var(--grey-2);
     width: 100%;
+    flex-grow: 1;
 }
