--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -14,10 +14,10 @@
     padding-bottom: 24px;
 }
 
-.skeleton__top_circle {
+.skeleton__top-circle {
     height: 64px;
     width: 64px;
-    border-radius: 100px;
+    border-radius: 50%;
     background-color: var(--grey-2);
 }
 
@@ -25,17 +25,18 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 100%;
 }
-.skeleton__content_row {
+.skeleton__row {
     height: 20px;
     background-image: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
 }
 
 .skeleton__content_title {
-    width: 172px;
+    width: 15%;
 }
 
 .skeleton__content_subtitle {
-    width: 257px;
+    width: 25%;
 }
 
